add new fonts to index

--- a/index.html
+++ b/index.html
@@ -3,21 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap">
     <title>Información Legal</title>
     <style>
-        /* Estilo para limitar el ancho máximo a 800 píxeles */
         .contenedor {
-          max-width: 800px;
-          margin: 0 auto; /* Centra el contenedor en la página si el ancho de la ventana es mayor que 800px */
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 20px;
+            font-family: 'Montserrat', sans-serif;
         }
         .contenedor h2.centrado {
-        text-align: center
+            text-align: center
+        }
+        .contenedor p {
+            text-align: justify;
         }
         .contenedor p.p_centrado {
-        text-align: center
+            text-align: center
         }
         .contenedor ul {
-        list-style-type: lower-alpha; /* Cambia 'lower-alpha' a 'upper-alpha' si prefieres letras mayúsculas */
+            list-style-type: lower-alpha;
+        }
+        .contenedor ul li.negrita {
+            font-weight: bold;
         }
       </style>
 </head>
@@ -80,7 +88,7 @@
         <h3>4.	Seguridad de la Información:</h3>
         <p>Implementamos medidas de seguridad para prteger la información contra accesos no autorizados, pérdidas o alteraciones. Esto incluye el cifrado de datos y prácticas de seguridad de TI.</p>
         <h3>5.	Derechos de Acceso y Control:</h3>
-        <p>Los usuarios tienen el derecho de acceder, corregir o eliminar sus datos personales. Pueden ejercer estos derechos poniéndose en contacto con nosotros a través de conteodespensa@gmail.com</p>
+        <p>Los usuarios tienen el derecho de acceder, corregir o eliminar sus datos personales. Pueden ejercer estos derechos poniéndose en contacto con nosotros a través del <a href="mailto:conteodespensa@gmail.com">correo electrónico.</a></p>
         <h3>6.	Cambios en la Política de Privacidad:</h3>
         <p>Nos reservamos el derecho de actualizar o modificar esta Política en cualquier momento. Se notificará a los usuarios sobre tales cambios.</p>
         <br>
