new support page

--- a/support.html
+++ b/support.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Support</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap">
+    <title>Información Legal</title>
     <style>
         .contenedor {
             max-width: 800px;
             margin: 0 auto;
             padding: 20px;
             font-family: 'Montserrat', sans-serif;
-            display: flex;
-            align-items: center;
         }
         .contenedor h2.centrado {
             text-align: center
@@ -32,7 +31,59 @@
 </head>
 <body>
     <div class="contenedor">
-        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdzbM6X4LONqDnwednZpqwgP6NXXB1QXYYt9dB3MZDI-d2uUw/viewform?embedded=true" width="640" height="840" frameborder="0" marginheight="0" marginwidth="0">Cargando…</iframe>
+        <H2 class="centrado">SOPORTE CONTEO DESPENSA</H2>
+        <P class="p_centrado">Fecha de última actualización: 20/01/2024.</P>
+        <H1>Instrucciones de Uso:</H1>
+        <P>¡Bienvenido a Conteo Despensa, tu herramienta de gestión de préstamos! A continuación, te proporcionamos instrucciones detalladas para aprovechar al máximo nuestra aplicación:</P>
+        <H3>Registro de Usuario::</H3>
+        <p>Abre la aplicación Conteo Despensa y selecciona la opción de "Registro" desde la pantalla de inicio.</p>
+        <p>Completa los campos requeridos, incluyendo nombre, apellido, correo electrónico, contraseña y selecciona el tipo de usuario a través de un menú desplegable con las opciones "Administrador" o "Empleado".</p>
+        <p>Si seleccionas "Empleado", se mostrará un campo adicional "Correo de la Empresa o Administrador". Ingresa el correo asociado a la empresa o administrador al que deseas vincularte.</p>
+        <P>Administrador (Empresa): Después del registro, tendrás acceso al apartado de "Perfil" desde donde puedes ver y editar la información de tu empresa y controlar el acceso de los Empleados.</P>
+        <P>Empleado: Después del registro, serás vinculado automáticamente a la empresa correspondiente usando el correo del administrador ingresado.</P>
+        <H3>Iniciar Sesión:</H3>
+        <P>Abre la aplicación Conteo Despensa en tu dispositivo móvil. Ingresa tu nombre de usuario y contraseña. Selecciona "Iniciar Sesión" para acceder a tu cuenta.</P>
+        <H3>Interfaz Principal:</H3>
+        <P>En la pantalla principal, encontrarás una visión general de los pagos del día y 3 botones con 3 diferentes tipos de préstamos, en donde se muestran los pagos pendientes del día.</P>
+        <p>Navega entre las pestañas "Clientes", "Perfil", y "Pasamanos, Cartera, Ahorros" para acceder a funciones específicas.</p>
+        <H3>Gestión de Clientes:</H3>
+        <P><strong>Agregar Cliente:</strong> Toca la pestaña "Clientes". Selecciona el botón +. Completa la información del nuevo cliente y toca "Guardar".</P>
+        <P><strong>Ver Clientes:</strong> Consulta la lista de clientes registrados y sus detalles en la pestaña "Clientes".</P>
+        <H3>Registro de Préstamos:</H3>
+        <P><strong>Registrar Préstamo:</strong> Toca alguna de las tres opciones de préstamos (Cartera, Pasamanos, Ahorros), allí selecciona " + ". Ingresa los detalles del préstamo, incluido el monto y la cantidad de cuotas.</P>
+        <P><strong>Realizar Pagos:</strong> Presiona alguna de las tres opciones de préstamos (Cartera, Pasamanos, Ahorros), allí te saldrán los pagos que debes cobrar durante el día, solo se mostrarán los del día. Para realizar el pago, solo debes presionar al cliente que salga en la lista y luego rellenar los datos solicitados.</P>
+        <H3>Consultar Estadísticas:</H3>
+        <P>En la pantalla principal aparecerá el monto total recolectado durante el día. Si eres un Administrador aparecerá el monto total incluyendo el de tus empleados.</P>
+        <P>Si estás registrado como Administrador, puedes ver revisar las estadísticas generales en el apartado de perfil y generar reporte. Allí puedes filtrar por fechas y rengos específicos.</P>
+        <H3>Cerrar Sesión:</H3>
+        <P>Para mayor seguridad, cierra sesión cuando hayas terminado de usar la aplicación.</P>
+        <P>Al utilizar Conteo Despensa aceptas estos Términos y Condiciones. Si tienes alguna pregunta o inquietud, no dudes en ponerte en contacto con nosotros.</P>
+        <br>
+        <H1>Preguntas Frecuentes (FAQ):</H1>
+        <h3>¿Cómo registro una nueva empresa como administrador?</h3>
+        <p>Haciendo el registro normal desde la aplicación, seleccionando en rol administrador. Cada administrador es una empresa, no pueden existir dos administradores en una misma empresa. El correo con el que se registre ese administrador, será el identificador de la empresa.</p>
+        <h3>¿Cómo un empleado se une a una empresa?</h3>
+        <p>Al registrarte como empleado, ingresa el correo del administrador o la empresa en el campo correspondiente. Espera la aprobación del administrador. Una vez aprobado, tendrás acceso a las funciones de tu empresa.</p>
+        <h3>¿Cómo registro un nuevo cliente?</h3>
+        <p>Ve a la sección "Clientes" y selecciona "+". Completa la información del nuevo cliente, incluyendo nombre, apellido, cédula de identificación, dirección y teléfono. Guarda la información para registrar al cliente.</p>
+        <h3>¿Cómo registro un nuevo préstamo?</h3>
+        <p>Navega a alguna de las 3 opciones de préstamos (pasamanos, cartera, ahorro) y da tap en "+". Ingresa los detalles del préstamo, como el monto, la fecha de vencimiento y el cliente asociado. guarda la información para registrar el préstamo.</p>
+        <h3>¿Cómo ingreso los pagos diarios?</h3>
+        <p>Dirígete a la sección correspondiente del prestamos a registrar el pago (pasamanos, cartera, ahorro). Allí se mostrarán los clientes a registrar de ese día. Mantén actualizado el registro de pagos.</p>
+        <h3>¿Cómo elimino mi cuenta?</h3>
+        <p>Accede a la sección "Perfil" y presiona en eliminar cuenta.</p>
+        <br>
+        <h1>Guías y Tutoriales:</h1>
+        <p>Visita nuestro canal de Yotube: <a href="https://www.youtube.com/@ConteoDespensa" target="_blank">Conteo Despensa</a></p>
+        <p></p>
+        <br>
+        <h1>Políticas de Privacidad y Términos de Servicio:</h1>
+        <p>Visita este enlance: <a href="https://jgaviriadev.github.io/web_conteo_despensa/" target="_blank">Conteo Despensa- Legal</a></p>
+        <br>
+        <h1>Formulario de Contacto:</h1>
+        <div class="contenedor">
+            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdzbM6X4LONqDnwednZpqwgP6NXXB1QXYYt9dB3MZDI-d2uUw/viewform?embedded=true" width="640" height="840" frameborder="0" marginheight="0" marginwidth="0">Cargando…</iframe>
+        </div>
     </div>
 </body>
 </html>
