--- a/download.html
+++ b/download.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Centrar un Div</title>
+    <title>Descargas</title>
     <style>
         body {
             font-family: Arial, sans-serif;
