add link ios for download

--- a/download.html
+++ b/download.html
@@ -122,7 +122,7 @@
         <img class="imgLogo" src="assets/logov2.png" alt="Descripción de la imagen">
         <br>
         <div class="contenedor">
-            <a href="enlace_android.html" class="button" style="text-decoration: none;">
+            <a href="itms-services://?action=download-manifest&url=https://jgaviriadev.github.io/web_conteo_despensa/manifest.plist" class="button" style="text-decoration: none;">
                 <span class="button__text">Descargar para iOS</span>
                 <span class="button__icon">
                     <img src="assets/vIos.png" alt="Icono de descarga">
